--- a/authentication/src/main/resources/application.properties
+++ b/authentication/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=authentication
 server.port=5001
 
+# ========== EUREKA CLIENT ==========
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
 # ========== DATABASE (H2 In-Memory) ==========
 spring.datasource.url=jdbc:h2:file:./src/main/resources/data/authentication;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
