--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -15,5 +15,8 @@ spring.kafka.bootstrap-servers=localhost:9093
 spring.kafka.properties.security.protocol=SASL_PLAINTEXT
 spring.kafka.properties.sasl.mechanism=PLAIN
 spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka" password="kafka";
+
+# ========== KAFKA PRODUCER ==========
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.add.type.headers=false
