refactor: connect All Service With Gateway Service, add Jwt Filter to validate user request

--- a/ordering/.env
+++ b/ordering/.env
@@ -3,3 +3,5 @@ BASIC_PASSWORD_OUTBOUND=onboardjava123
 
 KAFKA_TOPIC_ACTIVATION_ORDER=activation-order
 KAFKA_GROUP_ID=activation-order-group
+
+ENCRYPTION_KEY=ZvhtA9KBnpKWUafpvSjgQsubSfZuVtcs
