--- a/product/.env
+++ b/product/.env
@@ -2,3 +2,7 @@ BASIC_USERNAME_OUTBOUND=dans
 BASIC_PASSWORD_OUTBOUND=onboardjava123
 
 KAFKA_TOPIC_ACTIVATION_ORDER=activation-order
+
+JWT_SECRET_KEY=R3hY5QsjSVYwSQRfVJJuG5xPx7Hafmbe
+
+ENCRYPTION_KEY=ZvhtA9KBnpKWUafpvSjgQsubSfZuVtcs
