--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=product
 server.port=5002
 
+# ========== EUREKA CLIENT ==========
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
 # ========== REDIS ==========
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
